code added to get rudimentary CRUD in wow project

--- a/HealthNotesChallenge/mywow/templates/mywow.html
+++ b/HealthNotesChallenge/mywow/templates/mywow.html
@@ -18,7 +18,7 @@
 <h2>Practioner Sign-In Below:</h2>
 
 </h4>
-<form action="/your-name/" method="get">
+<form action="" method="GET">
     {% csrf_token %}
     {{ SignIn }}
     <input type="submit" value="Submit">
