added another template to correspond to creation of a portal page which practitioner will be taken to after sign in, then navigate to the other 3 pages in the website, practioner, conditions, treatments, and added as much corresponding code to make this work in the views, templates, urls, forms files,there is partial CRUD when submitting practitioner information on the homepage

--- a/HealthNotesChallenge/mywow/templates/mywow.html
+++ b/HealthNotesChallenge/mywow/templates/mywow.html
@@ -24,7 +24,7 @@
 
 <h2>Practitioner Sign-In Below:</h2>
 
-<form action="" method="GET">
+<form action="" method="POST">
     {% csrf_token %}
     {{ SignIn }}
     <input type="submit" value="Submit">
