Added basic wireframe functionality

--- a/HealthNotesChallenge/mywow/templates/mywow.html
+++ b/HealthNotesChallenge/mywow/templates/mywow.html
@@ -2,17 +2,21 @@
 
 
 
-<h2>Practitioner</h2>
+<h2>Practitioner DB entries</h2>
 
-<p><a href='{% url "page1" %}'>Practitioner</a></p>
+<p><a href='{% url "page1" %}'>Practitioners</a></p>
 
-<h2>Conditions</h2>
+<h2>Conditions DB entries</h2>
 
-<p><a href='{% url "page1" %}'>Conditions</a></p>
+<p><a href='{% url "conditions" %}'>Conditions</a></p>
 
-<h2>Treatments</h2>
+<h2>Treatments DB entries</h2>
 
-<p><a href='{% url "page1" %}'>Treatments</a></p>
+<p><a href='{% url "treatments" %}'>Treatments</a></p>
+
+<h2>Posts DB entries</h2>
+
+<p><a href='{% url "posts" %}'>Posts</a></p>
 
 <h4>Disclaimer: This website is for informational purposes only.
     In no way, shape or form should this website or it's creators
