--- a/HealthNotesChallenge/mywow/templates/poststemplate.html
+++ b/HealthNotesChallenge/mywow/templates/poststemplate.html
@@ -4,5 +4,7 @@
     {{ data.title }}<br/>
     {{ data.body }}<br/>
     <hr/>
+	<a href="{% url 'update_view' part_id=data.post_id %}"><i class="Update"><p>Update</p></i></a>
+	<a href="{% url 'delete_view' part_id=data.post_id %}"><i class="Delete"><p>Delete</p></i></a>
     {% endfor %}
 </div>
