added markdown to readme.md, commentary to  models and views, and explanitory text to home about purpose annd use of site

--- a/HealthNotesChallenge/mywow/templates/mywow.html
+++ b/HealthNotesChallenge/mywow/templates/mywow.html
@@ -1,6 +1,27 @@
 <h1>HEALTH NOTES CHALLENGE - HOME</h1>
 
+<h4>Welcome to my homepage! Health Notes Challenge is a public
+    forum targeting healthcare practitioners and providers of
+    all levels of education and experience, encouraging free exchange
+    of ideas using a post format, regarding a broad spectrum of 
+    conditions and treatments affecting individuals.
 
+    To utilize the site, first go to the sign in form at the bottom
+    of this page and complete the required fields and submit to gain
+    access to the portal page.
+    
+    From the portal page, choice from the options Practitioner, 
+    Conditions, Treatments and Post. As an example, go to Post and
+    complete the required fields, adding what you like and submit.
+
+    After submitting, click on re-submit credentials and this will
+    take you back to the homepage. From here you can go to the Posts
+    link and click, it will take you to your most recent post, which 
+    you can update or delete.
+
+    We hope you find the information on the site useful!
+    
+</h4>
 
 <h2>Practitioner DB entries</h2>
 
