html and css additions and changes

--- a/HealthNotesChallenge/mywow/templates/changeposttemplate.html
+++ b/HealthNotesChallenge/mywow/templates/changeposttemplate.html
@@ -1,6 +1,12 @@
+<body style="background-color: pink;"(218, 28, 224);"></body>
+
+<html>
+
+
 <h1>Post</h1>
 <form action="" method="POST">
     {% csrf_token %}
     {{ Post }}
     <input type="submit" value="Submit">
 </form>
+</html>
