--- a/HealthNotesChallenge/mywow/templates/conditionstemplate.html
+++ b/HealthNotesChallenge/mywow/templates/conditionstemplate.html
@@ -1,6 +1,10 @@
+<body style="background-color: red;"></body>
+
+<html>
 <div class="main">
     {% for data in dataset %}.
     {{ data.name_condition }}<br/>
     <hr/>
     {% endfor %}
 </div>
+</html>
