--- a/HealthNotesChallenge/mywow/templates/page1template.html
+++ b/HealthNotesChallenge/mywow/templates/page1template.html
@@ -1,3 +1,6 @@
+<body style="background-color: rgba(255, 255, 0, 0.877);"></body>
+
+<html>
 <div class="main">
     {% for data in dataset %}.
     {{ data.first_name }}<br/>
@@ -9,3 +12,4 @@
     <hr/>
     {% endfor %}
 </div>
+</html>
