--- a/HealthNotesChallenge/mywow/templates/portaltemplate.html
+++ b/HealthNotesChallenge/mywow/templates/portaltemplate.html
@@ -1,3 +1,7 @@
+<body style="background-color: rgba(255, 255, 0, 0.774);"></body>
+
+<html>
+
 <h1>Practitioner Info:</h1>
 <p>First Name: {{ request.session.practitioner.first_name }}</p>
 <p>Last Name: {{ request.session.practitioner.last_name }}</p>
@@ -36,3 +40,4 @@
     {{ Post }}
     <input type="submit" value="Submit">
 </form>
+</html>
