--- a/HealthNotesChallenge/mywow/templates/treatmentstemplate.html
+++ b/HealthNotesChallenge/mywow/templates/treatmentstemplate.html
@@ -1,3 +1,6 @@
+<body style="background-color: lightblue;"></body>
+
+<html>
 <div class="main">
     {% for data in dataset %}.
     {{ data.medical }}<br/>
@@ -10,3 +13,4 @@
     <hr/>
     {% endfor %}
 </div>
+</html>
