--- a/HealthNotesChallenge/mywow/templates/mywow.html
+++ b/HealthNotesChallenge/mywow/templates/mywow.html
@@ -1,3 +1,5 @@
+<body style="background-color: aquamarine;"></body>
+
 <h1>HEALTH NOTES CHALLENGE - HOME</h1>
 
 <h4>Welcome to my homepage! Health Notes Challenge is a public
