--- a/HealthNotesChallenge/mywow/templates/postportaltemplate.html
+++ b/HealthNotesChallenge/mywow/templates/postportaltemplate.html
@@ -1,3 +1,6 @@
+<body style="background-color: rgba(255, 255, 0, 0.678);"></body>
+
+<html>
 <h1>Practitioner Info:</h1>
 <p>First Name: {{ request.session.practitioner.first_name }}</p>
 <p>Last Name: {{ request.session.practitioner.last_name }}</p>
@@ -23,3 +26,5 @@
 <h1>Post</h1>
 <p>Post Title: {{ request.session.PostsPost.title }}</p>
 <p>Post Body: {{ request.session.PostsPost.body }}</p>
+
+</html>
