DL I made all changes you suggested in the previous pull request review, and added several more, including correcting the title of the project to match wireframe, spelling corrections, in-line correction of required fields in other forms, added Return Home to the re-enter credentials button, please runserver on your end and look around, then mergeif comfortable. Thanks

--- a/HealthNotesChallenge/mywow/templates/changeposttemplate.html
+++ b/HealthNotesChallenge/mywow/templates/changeposttemplate.html
@@ -1,6 +1,7 @@
-<body style="background-color: pink;"(218, 28, 224);"></body>
-
+<!DOCTYPE html>
 <html>
+
+<body style="background-color: pink;"(218, 28, 224);">
 
 
 <h1>Post</h1>
@@ -9,4 +10,5 @@
     {{ Post }}
     <input type="submit" value="Submit">
 </form>
+</body>
 </html>
