--- a/HealthNotesChallenge/mywow/templates/page1template.html
+++ b/HealthNotesChallenge/mywow/templates/page1template.html
@@ -1,6 +1,9 @@
-<body style="background-color: rgba(255, 255, 0, 0.877);"></body>
+<!DOCTYPE html>
 
 <html>
+
+<body style="background-color: rgba(255, 255, 0, 0.877);">
+
 <div class="main">
     {% for data in dataset %}.
     {{ data.first_name }}<br/>
@@ -12,4 +15,7 @@
     <hr/>
     {% endfor %}
 </div>
+
+</body>
+
 </html>
