--- a/HealthNotesChallenge/mywow/templates/treatmentstemplate.html
+++ b/HealthNotesChallenge/mywow/templates/treatmentstemplate.html
@@ -1,6 +1,9 @@
-<body style="background-color: lightblue;"></body>
-
+<!DOCTYPE html>
 <html>
+
+
+<body style="background-color: lightblue;">
+
 <div class="main">
     {% for data in dataset %}.
     {{ data.medical }}<br/>
@@ -13,4 +16,7 @@
     <hr/>
     {% endfor %}
 </div>
+
+</body>
+
 </html>
