made multiple changes in the layout of home page, further spelling corrections, added return home buttonsto all pages/templates, added headings to all pages/templates, adding further user information on utilization and interactivity

--- a/HealthNotesChallenge/mywow/templates/conditionstemplate.html
+++ b/HealthNotesChallenge/mywow/templates/conditionstemplate.html
@@ -3,6 +3,7 @@
 
 <body style="background-color: red;">
 
+<h1>Conditions</h1>
 
 <div class="main">
     {% for data in dataset %}.
@@ -10,6 +11,8 @@
     <hr/>
     {% endfor %}
 </div>
+
+<a href='/'><button>Return Home</button></a>
 
 </body>
 
