--- a/HealthNotesChallenge/mywow/templates/mywow.html
+++ b/HealthNotesChallenge/mywow/templates/mywow.html
@@ -5,28 +5,39 @@
 
 <h1>HEALTH NOTES - HOME</h1>
 
-<h4><p>Welcome to my homepage! Health Notes is a public
+<h4>
+    <p>Welcome to my homepage! Health Notes is a public
     forum targeting healthcare practitioners and providers of
     all levels of education and experience, encouraging free exchange
     of ideas using a post format, regarding a broad spectrum of 
     conditions and treatments affecting individuals.</p>
 
-    <p>To utilize the site, first go to the sign in form at the bottom
-    of this page and complete the required fields and submit to gain
-    access to the portal page.</p>
+    <p>To utilize the site, first go to the Practitioner Sign-In form 
+    below on this page and complete the required fields then submit to 
+    gain access to the portal page.</p>
     
     <p>From the portal page, choose from the options Practitioner, 
     Conditions, Treatments and Post. As an example, go to Post and
     complete the required fields, adding what you like and submit.</p>
 
-    <p>After submitting, click on re-submit credentials and this will
-    take you back to the homepage. From here you can go to the Posts
-    link and click, it will take you to your most recent post, which 
-    you can update or delete.</p>
+    <p>After submitting, click on Re-Enter Credentials/Return Home 
+    and this will take you back to the homepage. From here you can go 
+    to the Posts link and click, it will take you to your most recent post, and a 
+    list of all prior posts in chronological order, 
+    which you can update or delete.</p>
 
-    <p>We hope you find the information on the site informative and useful!</p>
+    <p>I hope you find the information on the site informative, useful
+    and perhaps even life saving.</p>
     
 </h4>
+
+<h2>Practitioner Sign-In Below:</h2>
+
+<form action="" method="POST">
+    {% csrf_token %}
+    {{ SignIn.as_p }}
+    <input type="submit" value="Submit">
+</form>
 
 <h2>Practitioner entries:</h2>
 
@@ -51,13 +62,7 @@
     practitioners, regarding medical conditions and their treatments,
     especially focusing on clinical trials being evaluated by the FDA.
 
-<h2>Practitioner Sign-In Below:</h2>
 
-<form action="" method="POST">
-    {% csrf_token %}
-    {{ SignIn.as_p }}
-    <input type="submit" value="Submit">
-</form>
 
 <p>{% filter force_escape|lower %}
     This text will be HTML-escaped, and will appear in all lowercase.
