--- a/HealthNotesChallenge/mywow/templates/page1template.html
+++ b/HealthNotesChallenge/mywow/templates/page1template.html
@@ -4,6 +4,8 @@
 
 <body style="background-color: rgba(255, 255, 0, 0.877);">
 
+<h1>Practitioners</h1>
+
 <div class="main">
     {% for data in dataset %}.
     {{ data.first_name }}<br/>
@@ -15,6 +17,8 @@
     <hr/>
     {% endfor %}
 </div>
+
+<a href='/'><button>Return Home</button></a>
 
 </body>
 
