--- a/HealthNotesChallenge/mywow/templates/portaltemplate.html
+++ b/HealthNotesChallenge/mywow/templates/portaltemplate.html
@@ -4,6 +4,7 @@
 
 <body style="background-color: rgba(255, 255, 0, 0.774);">
 
+<h1>PORTAL</h1>    
 
 <h1>Practitioner Info:</h1>
 <p>First Name: {{ request.session.practitioner.first_name }}</p>
@@ -36,7 +37,7 @@
     <input type="submit" value="Submit">
 </form>
 
-<a href='/'><button>Re-Enter Credentials/Return Home</button></a>
+
 
 <h1>Post</h1>
 <form action="" method="POST">
@@ -44,6 +45,8 @@
     {{ Post.as_p }}
     <input type="submit" value="Submit">
 </form>
+
+<a href='/'><button>Re-Enter Credentials/Return Home</button></a>
 
 </body>
 
