--- a/HealthNotesChallenge/mywow/templates/postportaltemplate.html
+++ b/HealthNotesChallenge/mywow/templates/postportaltemplate.html
@@ -24,11 +24,13 @@
 <p>Palliative: {{ request.session.TreatmentsPost.palliative }}</p>
 <p>Clinical Trials: {{ request.session.TreatmentsPost.clinical_trials }}</p>
 
-<a href='/'><button>Re-Enter Credentials</button></a>
+
 
 <h1>Post</h1>
 <p>Post Title: {{ request.session.PostsPost.title }}</p>
 <p>Post Body: {{ request.session.PostsPost.body }}</p>
+
+<a href='/'><button>Re-Enter Credentials/Return Home</button></a>
 
 </body>
 
