--- a/HealthNotesChallenge/mywow/templates/treatmentstemplate.html
+++ b/HealthNotesChallenge/mywow/templates/treatmentstemplate.html
@@ -4,6 +4,8 @@
 
 <body style="background-color: lightblue;">
 
+<h1>Treatments</h1>
+
 <div class="main">
     {% for data in dataset %}.
     {{ data.medical }}<br/>
@@ -16,6 +18,8 @@
     <hr/>
     {% endfor %}
 </div>
+
+<a href='/'><button>Return Home</button></a>
 
 </body>
 
