--- a/HealthNotesChallenge/mywow/templates/conditionstemplate.html
+++ b/HealthNotesChallenge/mywow/templates/conditionstemplate.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en-US">
+
+<head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
 
 <body style="background-color: red;">
 
