--- a/HealthNotesChallenge/mywow/templates/treatmentstemplate.html
+++ b/HealthNotesChallenge/mywow/templates/treatmentstemplate.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html>
 
+<html lang="en-US">
 
-<body style="background-color: lightblue;">
+<head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
+
+<body style="background-color: blue;">
 
 <h1>Treatments</h1>
 
