my attempt at adding a delete button, id and actual delete functionality to the conditions page of the project, I was successful with the first two, but failed at the last...functionality, it seems like my code block for deletion in views.py is not being recognized, and guidance would be appreciated, thanks

--- a/HealthNotesChallenge/mywow/templates/conditionstemplate.html
+++ b/HealthNotesChallenge/mywow/templates/conditionstemplate.html
@@ -14,8 +14,11 @@
 
 <div class="main">
     {% for data in dataset %}.
+    {{ data.conditions_id }}<br/>
     {{ data.name_condition }}<br/>
     <hr/>
+
+    <a href="{% url 'delete_view' part_id=data.conditions_id %}"><i class="Delete"><p>Delete</p></i></a>    
     {% endfor %}
 </div>
 
