code to allow delete functionality in conditions entries page, while at same time not interfering with existing delete functionality in posts entries page, focusing on adding unique identifiers to urls.py and making in kind changes across other applicable files

--- a/HealthNotesChallenge/mywow/templates/conditionstemplate.html
+++ b/HealthNotesChallenge/mywow/templates/conditionstemplate.html
@@ -18,7 +18,7 @@
     {{ data.name_condition }}<br/>
     <hr/>
 
-    <a href="{% url 'delete_view' part_id=data.conditions_id %}"><i class="Delete"><p>Delete</p></i></a>    
+    <a href="{% url 'delete_con_view' part_id=data.conditions_id %}"><i class="Delete"><p>Delete</p></i></a>    
     {% endfor %}
 </div>
 
