added delete functionality to Treatments entries page, similiar to how I did the Conditions entries page, unusual problem arose with color of button that CSS assigned it was same as background so I could not see the button, and when I realized it was actually there and working, I changed the background color to lighter and the button showed up! really odd!

--- a/HealthNotesChallenge/mywow/templates/treatmentstemplate.html
+++ b/HealthNotesChallenge/mywow/templates/treatmentstemplate.html
@@ -8,12 +8,13 @@
 
 </head>
 
-<body style="background-color: blue;">
+<body style="background-color: rgb(11, 159, 245);">
 
 <h1>Treatments</h1>
 
 <div class="main">
     {% for data in dataset %}.
+    {{ data.treatments_id }}<br/>
     {{ data.medical }}<br/>
     {{ data.surgical }}<br/>
     {{ data.radiation }}<br/>
@@ -22,6 +23,8 @@
     {{ data.palliative }}<br/>
     {{ data.clinical_trials }}<br/>
     <hr/>
+    
+    <a href="{% url 'delete_tre_view' part_id=data.treatments_id %}"><i class="Delete"><p>Delete</p></i></a>    
     {% endfor %}
 </div>
 
