copied, pasted, modified code to add delete functionality to the Practitioner entries page in project, now all entries page have this feature, also tweeked the plurality of Practitioner vs. Practitioners to match throughout the pages in project, tested locally and it all works!

--- a/HealthNotesChallenge/mywow/templates/mywow.html
+++ b/HealthNotesChallenge/mywow/templates/mywow.html
@@ -54,7 +54,7 @@
 
     <h2>Practitioner entries:</h2>
 
-    <p><a href='{% url "page1" %}'>Practitioners</a></p>
+    <p><a href='{% url "page1" %}'>Practitioner</a></p>
 
     <h2>Conditions entries:</h2>
 
